# ChangeLog for dev-python/oslo-messaging
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/oslo-messaging/ChangeLog,v 1.10 2015/04/22 20:42:32 prometheanfire Exp $

*oslo-messaging-1.10.0 (22 Apr 2015)

  22 Apr 2015; Matthew Thode <prometheanfire@gentoo.org>
  +oslo-messaging-1.10.0.ebuild:
  bup

*oslo-messaging-1.9.0 (25 Mar 2015)

  25 Mar 2015; Matthew Thode <prometheanfire@gentoo.org>
  +oslo-messaging-1.9.0.ebuild:
  bup

*oslo-messaging-1.8.0 (11 Mar 2015)

  11 Mar 2015; Matthew Thode <prometheanfire@gentoo.org>
  +oslo-messaging-1.8.0.ebuild:
  bup

*oslo-messaging-1.7.0 (26 Feb 2015)

  26 Feb 2015; Matthew Thode <prometheanfire@gentoo.org>
  +oslo-messaging-1.7.0.ebuild:
  bumping oslo-messaging

*oslo-messaging-1.5.1 (31 Jan 2015)

  31 Jan 2015; Matthew Thode <prometheanfire@gentoo.org>
  +oslo-messaging-1.5.1.ebuild:
  bumping to 1.5.1

*oslo-messaging-1.4.1 (10 Nov 2014)

  10 Nov 2014; Matthew Thode <prometheanfire@gentoo.org>
  +oslo-messaging-1.4.1.ebuild:
  bup

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org>
  oslo-messaging-1.3.0.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  06 Jul 2014; Michał Górny <mgorny@gentoo.org> oslo-messaging-1.3.0.ebuild:
  Clean up obsolete dependencies on virtual/python-argparse and virtual/python-
  unittest2 (those packages were only required for <=python-2.6).

  29 Apr 2014; Patrick Lauer <patrick@gentoo.org> oslo-messaging-1.3.0.ebuild:
  Shrink description for repoman happy

*oslo-messaging-1.3.0 (21 Apr 2014)

  21 Apr 2014; Matthew Thode <prometheanfire@gentoo.org> +metadata.xml,
  +oslo-messaging-1.3.0.ebuild:
  first commit of oslo.messaging