@@ -7,6 +7,7 @@ DIST oslo.messaging-1.4.1.tar.gz 144160 SHA256 28243db5fb84287016d6f58fa485a7149
 DIST oslo.messaging-1.5.1.tar.gz 146353 SHA256 b1bac4fe771b089e839ae6b071a441f18468a5ac7c506a506d93875dce200250 SHA512 657633df4900321dccf0ede8d1e047d628c9451c9f33d5a4f61cd4bf1e476d1212b7b05351afab8e1020555ef69e567446e26970a2593c97cceaf2153259f640 WHIRLPOOL b869843f1f9e03054466b3324887922b011868b9b520231f7299d0496bc3d7decdea9b12f437c2bc2f8b1883231c7c5af269a86662c5e40740aecc7ce463050c
 DIST oslo.messaging-1.7.0.tar.gz 201952 SHA256 dd18921a9bcdc8d34c64410bb684dcd852a7a320e6be4992b0c93a7dc02b12f8 SHA512 1531d19a585609091f490138044b5c543ef26c34811e0268245a4710d945d61bdb77cc5729cd7b3f4477e2d78c1feda3801c614e8994c9d3f2638e93af73c7f7 WHIRLPOOL f53580b6b955ffccae0e7f80e39e11895e4cc7a2e22755c0183bfc5a6c13af42ebebd71c8137a6be767f66f83d6de20510bb46e67f02de6f9dc1717a82c80687
 DIST oslo.messaging-1.8.0.tar.gz 201858 SHA256 afff6d8367e6723a64dcb518d709d4ed0f91e15960360051d2498fc34e4ddda2 SHA512 5a2f79350f0763af52df984a43464bc12126e1520e4761c2c055b011f6063604e9aac4273732f45b1056a6af7aff120d005140ee89b2a9e5118f347c0918ad0d WHIRLPOOL 1343e4b6d691756240b252fbae90301bfde08b64ed7a0fade0d8b1662913ab55d1e844dade8215dbad68c4fab64e50005b1691b68aa35772d4ece862fe3bb9e7
+DIST oslo.messaging-1.8.2.tar.gz 208688 SHA256 31222c9afe3b5655401424a6229f633bebf20cfe5027e69d2e12f7e954556f1a SHA512 a8940635fb1d08871675730d2eb841af74896963d1f9624fec6ecff03e99f280091f342abba683aa9a5eac209009e75618f637571e34c5ef76fd8617f4ffe525 WHIRLPOOL 0fa2f5531178763ff607b062b8741ba02d396e868cc41a4e668e2ec26ef119f12dfa4261da418ec314c915e36e90f2cbd8da88f1bf559460fa0e442cd4a9b0f1
 DIST oslo.messaging-1.9.0.tar.gz 214963 SHA256 ac5f58378515597e6d5759653cac3828eb2ee6bb11e2bbf94ee0d65a692990ed SHA512 2e7de860fed55b0548f3cfa4a911cba0750889fd807ed7addb83192dd37f84997ceecd92faf480be97873e58286748865c8c57a09014ae0de97c60be826cd27f WHIRLPOOL 8e331116313757c93b2add853a35929e0a0603b691f9ffb322f4e39c422e13d83ee757277e42ce9b0360cf9e5823bb066a48fadc8eb706f7ebca018b014e1e06
 EBUILD oslo-messaging-1.10.0.ebuild 2538 SHA256 d8fe43f94ac40ea20f6b5d20d2100e4fad24663074c8ccd321d8ea43c2d2733f SHA512 7660c9cad8d5fb87954d32d1234bcb1be99311d446b36b79dda2435e2ee448c852d36d1e948b0d99033db9f6915ea7153d85cd135e84b4acd56fa417fb3b9e86 WHIRLPOOL f0e1ab3f85cf9ef55f399963ed403fdb81d5868988b8c0fc61c038e1967da7db7f2a2d162fbcd3abaed4ad4f85115e227f5a3f28478c7d662415db6be6c4a038
 EBUILD oslo-messaging-1.3.0.ebuild 1975 SHA256 a6bc1d5320548ebe6f249753522df4da37514c8e2cbb59c60a6f71875a537653 SHA512 861c9c53dc7832c7a6b7273ada53f6af013bfa16eb818a01e6ff10f8227df21ec10fafe3226b4da932b741c6ee8715e4772b6cf249e697b9b7fd8578b8c38f94 WHIRLPOOL 2e235b63b602f2dc403b7eb8d2f53d235f593a737396a93bda9f45959548135489155d87e8c969b1a406e95f4be204e9b6463f621686f000ee5e4eb35b1204e7
@@ -14,23 +15,24 @@ EBUILD oslo-messaging-1.4.1.ebuild 2042 SHA256 976db6a9379ac8a728cd8d9f02211f497
 EBUILD oslo-messaging-1.5.1.ebuild 2221 SHA256 0cc317e60a6e72ac4b4e578c8f61c78ef3a6864881ab8edfd5b822772fd811e5 SHA512 de1f666129bf4ed86525261b9511b5f5b09829a8bbc0a6f241b33488d8fb441e87935532d8e2fa1af894d15762e57dd96cb6029b35a9265705f89fcfabefbd92 WHIRLPOOL 9ac469f76589ead1f53779581b5f21f629485c9f31305afd5ba47daf2ad50e675fc16f55a33001dcc8b36f4c4d80230beee4fc8efbe184a6f8c185f818f860c3
 EBUILD oslo-messaging-1.7.0.ebuild 2456 SHA256 b90589f884f0c0cbe86f8fb3549482800fe569ede55bdaf4b96327f649b42582 SHA512 65ce43aa878f201f6bd9ac3157688b526daaceadcda7107bab0b0ff9986224e52199463bd98485f3e53b45def6d5e1b48f1a793d8b3aa5d1312d64f7ddd298e7 WHIRLPOOL dc99e629f89ea69dbe047b603c184e765e18396429bf423338a56d334b7815e898586b4acaf3ba9ce7e1be54c53e6e252722d03b6aa36af564e4c3790682e722
 EBUILD oslo-messaging-1.8.0.ebuild 2456 SHA256 33fc4be3ca4800f67bb3dfa1eaa1889644e07b67bd0c8528f1f7c70c97e14f88 SHA512 bc5bc5a3c4610ab13bd29c057c37380902ff88347ccc4835424ebad1fb62d8b447f0b942c637f76d9114418c353719f5fde004e1fe4dd21faecda6325bc926d1 WHIRLPOOL c1de9ab5ca5679dffad4f2a7aea0656726527080dce24bd6d63b69157bae096fc409c18d7ef27e61e492339475f6b53e14cfa14160a2e8f0325466a1eb870b57
+EBUILD oslo-messaging-1.8.2.ebuild 2456 SHA256 a02f0f956bdcc9b1756e93a0a9fe6f52df13b9af8804d835c628da767a552be8 SHA512 b06aeb6b35a94b0c3cdc57e1f3d0a59752455c7b03248e5e0c1d75b0f76c519ad61b67b48cd05684cee9c46d65c51cb99e7370d0579c039995081c71957c81dd WHIRLPOOL f22abb1d7b436bf89bb720dea540ad5e7da0a530d590a447aae780a89d7e5ed8d955cb18e191da8095c5b05fd06c49e4ab1999432b2563ada49c5511eb2ad829
 EBUILD oslo-messaging-1.9.0.ebuild 2967 SHA256 01bc0ad02654e6e3f2acc608d8083208dae54de89e3c26837f1decdf3a5ff643 SHA512 75c7e3d4396fc68d246ba3c503a9900ad27395e179603f71ed7a6fc278e1de4bcc184945ae1c6707a53368415e1df07351b18b66ef4e7aaf9265e562fc1aeee5 WHIRLPOOL c6a372ac525891c27b7d0f5bfec0ed188d1d057efe04a7998d47634f5725bf8b1d77626dd80ebd9a103e2093c506ecc61f661597cfb38f3c4d3bbe864e1af79a
-MISC ChangeLog 1710 SHA256 e3812076f8af9e51a7ffb977103b43d604b875b21304edfb03e7b2aee8fe7cd9 SHA512 78834934a041fb9b290d6bbb6356bb93d60689145a64dc8bbc36a4bd76a9ca4e408236c9e6e6a689f139c11408a2289ea8e260f6f98e2b775b5475d4eefa1dc8 WHIRLPOOL 116784b12127053755234dae7f603181857ec7d48ca0160bbf0f4b2239835e372605bff181faf0279fc5ced92962922c276e3c0a020edbea458d0c04596bc8da
+MISC ChangeLog 1843 SHA256 7c5d0f44270891b6192ea1f6c3fc22de851c231b8fb97d626a0f036118d7b928 SHA512 8a29f4bbd64fb8faabb6cec7b3d7769186d3b6cb1cb9c63ff960d38f11d5d9066c4ec71c0319b7c585d2532a660a689ace148cd3000345db0363f0c6ba63eb4a WHIRLPOOL 5663e33112b02cfd92dc767c182dcc3010533f6bcb63d3bdb088379b8a73f58dcaa16e101e0ac8b91412131facedca8f3cd4ea67ff216ca37481a68e6e32df72
 MISC metadata.xml 427 SHA256 3a4c35d796508a19b9cd0d72fdfe53feea974410fa0173adbd2b9d9811f59c6b SHA512 7dada28671098c2047b749f4aa2dcda603541a82a146e0114c46689091c766e65045cd276646f185f40fb6777b499d2d6f797b80d589454625f5b6deb881f5df WHIRLPOOL cc73e8fc91aef40eb14c6125b1397997489262817028a23d05cc106584aaf0b75938df325a16224ebc2135e74e7cd332bb43009535c55e8c2b3cb38ff5b080e3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVOAfMAAoJEGSje+quGaToeLMQALyG8dk6jegl8fJjJLDxxJdk
-pG1Qm9etk941pxMc13wdAfM0SfPQwjncpwtq0IOffD9XlQUYUv7dC6Fat+Edt+VG
-9HgAxdram1TCfOEahdi714B3uPR61cbKlx38vqSH25dRkxCJVNU4pfPRj9efUwRx
-7xsbzYIxWWQJYjGBYtlsbE9rhn9WgooKXQ/05N1iSBYX21aRCH6PNbr7wWul0+EV
-JPjR2009Xr8nVoUCGPJdVI+H987SA6ex/4Qfit9zeZI2zxi+KoWD+yLAD8IwEN+9
-MwI4daetT0X/QYOzltbI38ra5EpL58CZuhtUsneswVu5ZZ2hPjPm3Abpsmoy5B1Z
-6hfptbGM846icCJ1pqMomlajIFIqsx6wVT1Rc81+8RkL5Fzq9cbjRdqdQ7ieTc+F
-OGVRWf1jsTNdhkx5IPAALjfO0zmfJeuxpt3TGn4ik50aQMLBcQFZeVBKmrPu6t55
-tijIGOngDVrgXRStaubs3vYTgzeQtrvNmNCD3nhrDh1Zd9BD4VOHL5N9VFiGzizg
-O+4BMSFe0D8hr89htWeJNB44XPj9ILHwtgkIlZbyw/ihK4iimmkqIn+sjGHH5aFN
-NqEciIChPWUt1u1ojU9d0To83/NcNA2BwRfJRnVQUDdWabMEuCQ/NXvVqnNlJqMl
-DaZHfvgjGMg+oWahkJKm
-=jjym
+iQIcBAEBCAAGBQJVP7d8AAoJEGSje+quGaToKbUQALSsFCvhfI/abt1rMoBcJ/9F
+HkTL9eZIaYcptZjxUDLVYGzAqCfmp0+c8v7iypjBoJamMMRuG5YbgywH6YcnmYaS
+EPNBsWZT/ecV8lbx3N2pJ9NLtf/Ylb8DbsXLCZG+aGBUBuDib6wZQU+ESbL/LPUT
+87ao3xx15iGbmGfXgUgiFoYFJs8nNE2EvRsl8BE0cYKbubtlEotb2socHCvyLCzg
+2zht/kBsCgww0f7Kb5AgDTjD2oU0qetuWpaPnNVXMSFVfXjhMHJjkDETZhv1IC3/
+hpzkWqV8bawQikxESoL7g23E5Io4+kTjv9IWU0PF8cYmP8mQqLFJTTD7vEz0HzJo
+jkyCJWNk25BCcYnBFpxcIUqpaeXwKRzlu3BUEfTrNOx2pQN8+jvLdlgDNJFNMjaf
+Y38s1qW3B88L/a39EfVr073IG494pepk2zKAJlMBcFoeqMdOcg6CVoUNV+Cp6PHm
+I40J2w28PC4IkSu1vBC33134tKqOGPS7M3WxbyODuJY80OhN8KuOUUG+mLKCh5xY
+EaStElm+qTtVE9h+ouDxyt8W8j/T7U/eX7E4yialFPd5rAOYF7JuPrCeqg8IK7Gm
+G1CuzQuQRi3GugPEzfQ57ZSeRrCOt3ac1KtS3n96DWL2K9PHiH2Tgi/T4JhtRB/D
+U0t4hys9nODwgIBLjh66
+=Dj74
 -----END PGP SIGNATURE-----
