@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=dev-python/setuptools[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/pbr-0.8[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <dev-python/pbr-1.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] test? ( >=dev-python/hacking-0.10[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <dev-python/hacking-0.11[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/fixtures-0.3.14[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/mock-1.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/mox3-0.7.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/subunit-0.0.18[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/testrepository-0.0.18[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/testscenarios-0.4[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/testtools-0.9.36[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] !~dev-python/testtools-1.2.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/oslotest-1.2.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/qpid-python[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/redis-py-2.10.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/pyzmq-14.3.1[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/coverage-3.6[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/sphinx-1.1.2[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] !~dev-python/sphinx-1.2.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <dev-python/sphinx-1.3.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/oslo-sphinx-2.2.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
+DESCRIPTION=Messaging API for RPC and notifications over a number of different messaging transports
+EAPI=5
+HOMEPAGE=https://pypi.python.org/pypi/oslo.messaging
+IUSE=test python_targets_python2_7
+KEYWORDS=~amd64 ~x86
+LICENSE=Apache-2.0
+RDEPEND=>=dev-python/oslo-config-1.9.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/oslo-utils-1.2.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/oslo-serialization-1.2.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/oslo-i18n-1.3.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/stevedore-1.1.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/six-1.9.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/eventlet-0.16.1[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/pyyaml-3.1.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/kombu-2.5.8[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/oslo-middleware-0.3.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/futures-2.1.6[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/aioeventlet-0.4[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/trollius-1.0.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
+REQUIRED_USE=|| ( python_targets_python2_7 )
+SLOT=0
+SRC_URI=mirror://pypi/o/oslo.messaging/oslo.messaging-1.8.2.tar.gz
+_eclasses_=distutils-r1	c01d5c4af34f4a37a51fc9638299c222	eutils	9fb270e417e0e83d64ca52586c4a79de	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	6d3a3cb5705b9fff1aeb7cfa4e3336fe	python-utils-r1	096f8247eae93026af13ab88cf4305cd	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
+_md5_=ee877da394612839b99bc8e9f7d08785
