@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/oslo-messaging
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/oslo-messaging/ChangeLog,v 1.10 2015/04/22 20:42:32 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/oslo-messaging/ChangeLog,v 1.11 2015/04/28 16:37:58 prometheanfire Exp $
+
+*oslo-messaging-1.8.2 (28 Apr 2015)
+
+  28 Apr 2015; Matthew Thode <prometheanfire@gentoo.org>
+  +oslo-messaging-1.8.2.ebuild:
+  bup
 
 *oslo-messaging-1.10.0 (22 Apr 2015)
 
